--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
