--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "next": "15.2.5",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.2.0",
