--- a/package.json
+++ b/package.json
@@ -21,28 +21,22 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "aos": "^2.3.4",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@shadcn/ui": "^0.0.4",
+    "@swc/core": "^1.11.21",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "next": "^15.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    
-    
-    "react-day-picker": "^8.10.1",
-    
-
-    "jwt-decode": "^4.0.0",
-    
     "next-auth": "^4.24.11",
-    
-    
+    "react": "^19.1.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
-  
+    "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
